--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "watch:build": "tsc --watch",
-    "node": "node ./app/app.js"
+    "node": "node ./server/server.js"
   },
   "keywords": [],
   "author": "",
