--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "cross-env": "~5.1.3",
     "css-loader": "~0.28.9",
     "cssnano": "~3.10.0",
+    "cypress": "^3.1.0",
     "es6-promise": "~4.2.4",
     "extract-text-webpack-plugin": "~3.0.2",
     "favicons-webpack-plugin": "0.0.7",
